Added PDF/A (needed to change images)

--- a/LaTeXi/applicabilita.tex
+++ b/LaTeXi/applicabilita.tex
@@ -14,20 +14,20 @@ Il software \textbf{Mycroft GUI} fa un pesante utilizzo del framework Qt, più s
 \section{Compatibilità, dispositivi ottimali e costi}
 La sezione precedente ha evidenziato come i requisiti tecnici dell'assistente vocale siano compatibili con una \textbf{vastissima gamma di dispositivi}, anche economici. Questo potrebbe \textbf{sgravare un'ulteriore spesa} ad un sistema ospedaliero vittima, da anni, di tagli e budget stringenti. Il software potrebbe infatti essere installato su un vecchio computer, o su un Raspberry Pi.
 \begin{figure}[H]
-    \begin{center}
-        \includegraphics[width=0.8\columnwidth]{images/applicabilita/RPiwithDisplay.png}
-    \end{center}
-    \caption{Raspberry Pi con display originale}
-    \label{fig:raspi-with-display}
+  \begin{center}
+    \includegraphics[width=0.8\columnwidth]{images/applicabilita/RPiwithDisplay.jpg}
+  \end{center}
+  \caption{Raspberry Pi con display originale}
+  \label{fig:raspi-with-display}
 \end{figure}
 Creando un setup con quest'ultimo, altoparlanti, microfono ed un display da 7", la spesa sarebbe di circa \textbf{cento euro alla data odierna}. Questo costo è senz'altro più basso di tanti dispositivi enterprise proposti ogni giorno agli ospedali, oltre a garantire \textbf{tutela dei dati}, \textbf{apertura delle logiche} di funzionamento (open source), \textbf{semplicità} di utilizzo. Un altro dispositivo molto interessante per questo progetto è il \textbf{Mycroft Mark II}, sviluppato direttamente dai creatori dell'assistente vocale, integrante tecnologie di cancellazione del rumore, un display per l'interfaccia grafica, altoparlanti e kernel Linux, con possibilità di accesso SSH per la configurazione e la codifica di nuove skills. Quest'ultimo costerà, al suo lancio, poco più di cento euro, e rappresenta l'alternativa perfetta ad un sistema autocostruito, probabilmente troppo sperimentale per un ospedale. La \textbf{privacy} è in ogni caso \textbf{garantita} dal team.
 \begin{figure}[H]
-    \begin{center}
-        \includegraphics[width=0.8\columnwidth]{images/applicabilita/Mark_II.png}
-    \end{center}
-    \caption{Mycroft Mark II}
-    \label{fig:mark-II}
+  \begin{center}
+    \includegraphics[width=0.8\columnwidth]{images/applicabilita/Mark_II.jpg}
+  \end{center}
+  \caption{Mycroft Mark II}
+  \label{fig:mark-II}
 \end{figure}
 \begin{center}
-    \textit{The Mycroft Mark II smart speaker is an open solution for individuals and companies who want to deploy voice technology, but don’t want to be in orbit around Silicon Valley.  Our technology can be run on premises and provides a great voice experience without sacrificing privacy.}
+  \textit{The Mycroft Mark II smart speaker is an open solution for individuals and companies who want to deploy voice technology, but don’t want to be in orbit around Silicon Valley.  Our technology can be run on premises and provides a great voice experience without sacrificing privacy.}
 \end{center}
