--- a/LaTeXi/bibliography.bib
+++ b/LaTeXi/bibliography.bib
@@ -1,13 +1,3 @@
-@book{book:encyclopedia_of_ml,
-    title =     {Encyclopedia of Machine Learning and Data Mining},
-    author =    {Claude Sammut (Editor), Geoffrey I. Webb (Editor)},
-    publisher = {Springer},
-    isbn =      {148997685X, 978-1489976857},
-    year =      {2017},
-    series =    {},
-    edition =   {2},
-    volume =    {},
-}
 @book{book:mitchell1997machine,
     title={Machine Learning},
     author={Mitchell, T.M.},
@@ -71,4 +61,10 @@
     title        = {Video dell'interazione con il bot},
     url =         {https://github.com/montali/tesi/tree/master/Resources/videos},
     year         = {2020}
+}
+@misc{docs:mycroft,
+    author       = {Mycroft AI},
+    title        = {Mycroft AI Documentation},
+    url =         {https://mycroft-ai.gitbook.io/docs/},
+    year         = {2019}
 }
