--- a/LaTeXi/skills.tex
+++ b/LaTeXi/skills.tex
@@ -1,9 +1,9 @@
 \chapter{Realizzazione di skills}
 \label{chap:skills}
-Mycroft permette di espandere le abilità del bot in maniera semplice: è infatti costruito modularmente, ed è in ogni momento possibile espandere o ridurre i moduli attivi.
+Mycroft permette di espandere le abilità del bot in maniera semplice: è infatti costruito modularmente, ed è in ogni momento possibile espandere o ridurre i moduli attivi \cite{docs:mycroft}.
 Questi moduli sono detti \textbf{skills}. Ogni skill è responsabile di una funzionalità: avremo ad esempio la skill del meteo, la skill che racconta barzellette o la skill che si occupa della domotica. Alla ricezione di una richiesta, Mycroft verifica gli intent e le keywords di ogni skill, attivando quella giusta.
 % TODO: flowchart con adapt+padatious
-La creazione di nuove skills è possibile grazie alla classe Python \texttt{MycroftSkill}, tramite la cui espansione possiamo definire i comportamenti della skill. All'installazione di Mycroft verrà reso disponibile il \textbf{Mycroft Skills Kit}, una command line interface che permette di eseguire le operazioni fondamentali collegate alle skills Mycroft. Tramite il comando \texttt{mycroft-msk create} verrà avviata una CLI che, dopo aver richiesto al programmatore alcune informazioni, genera il \textit{boilerplate code} necessario alla realizzazione della skill. Tra le informazioni richieste avremo nome, frasi d'esempio, dialoghi di risposta, descrizioni, etc\dots
+La creazione di nuove skills è possibile grazie alla classe Python \texttt{MycroftSkill}, tramite la cui espansione possiamo definire i comportamenti della skill. All'installazione di Mycroft verrà reso disponibile il \textbf{Mycroft Skills Kit}, una command line interface che permette di eseguire le operazioni fondamentali collegate alle skills Mycroft. Tramite il comando \texttt{mycroft-msk create} viene avviata una CLI che, dopo aver richiesto al programmatore alcune informazioni, genera il \textit{boilerplate code} necessario alla realizzazione della skill. Tra le informazioni richieste avremo nome, frasi d'esempio, dialoghi di risposta, descrizioni, etc\dots
 Il template viene inoltre fornito di \texttt{git}, un sistema di versioning che permette di tenere traccia delle modifiche al codice e semplificare l'interazione tra programmatori.
 \section{Struttura dei file della skill}
 La struttura delle skills è ben organizzata, e vi sono diverse tipologie di file. Oltre a licenza e README, abbiamo tre componenti fondamentali per il funzionamento.
@@ -11,10 +11,10 @@ La struttura delle skills è ben organizzata, e vi sono diverse tipologie di fil
 \paragraph{Directory \texttt{locale}}
 Questa directory contiene i file dipendenti dalla lingua. Le sottocartelle seguono i tag linguistici IETF, quindi l'italiano sarà rappresentato da \texttt{it-it} e l'inglese (americano) da \texttt{en-us}. All'interno di queste, possiamo incontrare quattro tipologie di file:
 \begin{itemize}
-    \item \textbf{\texttt{dialog}}: questi file contengono i dialoghi di risposta del bot. Sono presenti più frasi simili, in modo da avere interazioni più "umane" con il bot, che sceglie una frase casuale tra queste. Ad esempio, \texttt{get\_age.dialog} conterrà le frasi \textit{"Mi potresti dire quanti anni hai?"}, \textit{"Per favore, dimmi la tua età"}, \textit{"Qual è la tua età?"}...
-    \item \textbf{\texttt{intent}}: questi file contengono le frasi utilizzate per addestrare la rete neurale di Padatious. Ovviamente, più esempi vengono fatti, meglio la rete funzionerà. Per esempio, il file \texttt{symptoms.bleeding.intent} conterrà frasi come \textit{"Ho un'emorragia"}, \textit{"Sto sanguinando molto"}, \textit{"Ho una grande perdita di sangue"}...
-    \item \textbf{\texttt{voc}}: questi file contengono keywords utilizzate in Adapt e nelle domande a risposta chiusa. Siccome il progetto si basa fortemente su Padatious, troviamo solo i file vocabolario per le domande sì/no ed il riconoscimento di numeri. Ad esempio, il file \texttt{yes.voc} conterrà \textit{"Sì"}, \textit{"Certo"}, \textit{"Esatto"}...
-    \item \textbf{\texttt{entity}}: questi file contengono entità da estrarre negli intent. Ad esempio, l'intent \textit{fratture} estrae l'arto coinvolto nella frattura. Il file \texttt{limb.entity} conterrà quindi termini come \textit{"gamba"}, \textit{"pollice"}, \textit{"spalla"}...
+  \item \textbf{\texttt{dialog}}: questi file contengono i dialoghi di risposta del bot. Sono presenti più frasi simili, in modo da avere interazioni più "umane" con il bot, che sceglie una frase casuale tra queste. Ad esempio, \texttt{get\_age.dialog} conterrà le frasi \textit{"Mi potresti dire quanti anni hai?"}, \textit{"Per favore, dimmi la tua età"}, \textit{"Qual è la tua età?"}...
+  \item \textbf{\texttt{intent}}: questi file contengono le frasi utilizzate per addestrare la rete neurale di Padatious. Ovviamente, più esempi vengono fatti, meglio la rete funzionerà. Per esempio, il file \texttt{symptoms.bleeding.intent} conterrà frasi come \textit{"Ho un'emorragia"}, \textit{"Sto sanguinando molto"}, \textit{"Ho una grande perdita di sangue"}...
+  \item \textbf{\texttt{voc}}: questi file contengono keywords utilizzate in Adapt e nelle domande a risposta chiusa. Siccome il progetto si basa fortemente su Padatious, troviamo solo i file vocabolario per le domande sì/no ed il riconoscimento di numeri. Ad esempio, il file \texttt{yes.voc} conterrà \textit{"Sì"}, \textit{"Certo"}, \textit{"Esatto"}...
+  \item \textbf{\texttt{entity}}: questi file contengono entità da estrarre negli intent. Ad esempio, l'intent \textit{fratture} estrae l'arto coinvolto nella frattura. Il file \texttt{limb.entity} conterrà quindi termini come \textit{"gamba"}, \textit{"pollice"}, \textit{"spalla"}...
 \end{itemize}
 \paragraph{\texttt{settingsmeta.yaml}}
 Questo file contiene la definizione di impostazioni modificabili dall'utente sul sito di gestione di Mycroft. Ad esempio, l'utente potrebbe voler impostare i comportamenti di default, il nome del file esportato dal bot, una chiave API per l'integrazione con altri tool.
@@ -73,9 +73,9 @@ def handle_breathing(self, message):
 \end{minted}
 Il metodo salva nell'oggetto \texttt{med\_record} (\textit{scheda clinica}) il sintomo principale, ossia problemi di respirazione, ed il codice relativo, in questo caso il rosso (accesso immediato alle cure). Poi, tramite il metodo \texttt{speak\_dialog} di \texttt{MycroftSkill}, pronuncia uno a caso tra i dialoghi contenuti nel file \texttt{symptoms.breath.dialog}, come
 \begin{itemize}
-    \item \textit{"Capisco, qualche problema di respirazione."}
-    \item \textit{"Ok, segno nella scheda problemi di respirazione."}
-    \item \textit{"Capito: problemi di respirazione."}
+  \item \textit{"Capisco, qualche problema di respirazione."}
+  \item \textit{"Ok, segno nella scheda problemi di respirazione."}
+  \item \textit{"Capito: problemi di respirazione."}
 \end{itemize}
 Da qui in poi, le operazioni sono affidate ai metodi chiamati dai decorators.
 \subsection{Decorators utilizzati}
@@ -126,13 +126,13 @@ def covid_symptom(handler):
 \end{minted}
 Il metodo \texttt{ask\_covid\_questions} procede ad intervistare il paziente con il modello di diagnosi più usato al momento. Ogni domanda posta al paziente ha un suo \textit{score} caratteristico, che moltiplica un indice relativo al paziente in base alla gravità ed alla connessione con la malattia. Le caratteristiche indagate sono:
 \begin{itemize}
-    \item \textbf{Febbre}: moltiplicatore $2$
-    \item \textbf{Mal di gola}: moltiplicatore $1.3$
-    \item \textbf{Raffreddore}: moltiplicatore $1.3$
-    \item \textbf{Fatica respiratoria}: moltiplicatore $1.6$
-    \item \textbf{Tosse}: moltiplicatore $1.6$
-    \item \textbf{Contatti con infetti}: moltiplicatore $2$
-    \item \textbf{Mancanza di gusto}: moltiplicatore $1.7$
+  \item \textbf{Febbre}: moltiplicatore $2$
+  \item \textbf{Mal di gola}: moltiplicatore $1.3$
+  \item \textbf{Raffreddore}: moltiplicatore $1.3$
+  \item \textbf{Fatica respiratoria}: moltiplicatore $1.6$
+  \item \textbf{Tosse}: moltiplicatore $1.6$
+  \item \textbf{Contatti con infetti}: moltiplicatore $2$
+  \item \textbf{Mancanza di gusto}: moltiplicatore $1.7$
 \end{itemize}
 Ogni paziente sospetto ha inizialmente un \texttt{covid\_score} di $1$, che viene moltiplicato per i vari indici se il paziente risponde in modo affermativo. Se lo score supera una soglia predeterminata (al momento fissata a $15$), è sospetto COVID19 e verrà destinato ad un'area di triage apposita.
 \begin{minted}{python}
@@ -231,44 +231,44 @@ Questo formato standard permette di essere integrato semplicemente con infrastru
 \section{Esempio di conversazione}
 Riportiamo ora un esempio di conversazione realmente avvenuto. La conversazione è ascoltabile nei video disponibili sulla repo GitHub\cite{media:videos}.
 \begin{itemize}
-    \item \textbf{Utente:} \textit{Puoi aiutarmi?}
-    \item \textbf{Bot:} \textit{Prima di tutto, è lei ad avere bisogno?}
-    \item \textbf{Utente:} \textit{Esatto}
-    \item \textbf{Bot:} \textit{Qual è il sintomo principale?}
-    \item \textbf{Utente:} \textit{Ho la febbre}
-    \item \textbf{Bot:} \textit{Hai la febbre, quindi. Ti sei misurato di recente?}
-    \item \textbf{Utente:} \textit{Sì}
-    \item \textbf{Bot:} \textit{Per favore, dimmi a quanto hai la febbre}
-    \item \textbf{Utente:} \textit{Trentasette e otto}
-    \item \textbf{Bot:} \textit{Mi serve qualche informazione aggiuntiva per la diagnosi. Ora ti farò alcune domande a cui rispondere sì o no. Hai male alla gola?}
-    \item \textbf{Utente:} \textit{Sì}
-    \item \textbf{Bot:} \textit{Soffri di raffreddore?}
-    \item \textbf{Utente:} \textit{Sì}
-    \item \textbf{Bot:} \textit{Noti un affaticamento quando respiri?}
-    \item \textbf{Utente:} \textit{No}
-    \item \textbf{Bot:} \textit{Hai la tosse?}
-    \item \textbf{Utente:} \textit{Sì}
-    \item \textbf{Bot:} \textit{Sei stato a stretto contatto con persone affette dal nuovo Coronavirus?}
-    \item \textbf{Utente:} \textit{Sì}
-    \item \textbf{Bot:} \textit{Fai fatica a sentire i sapori e gli odori?}
-    \item \textbf{Utente:} \textit{Sì}
-    \item \textbf{Bot:} \textit{Stiamo chiamando un medico. È possibile che tu sia affetto da COVID19. Mi potresti dire quanti anni hai?}
-    \item \textbf{Utente:} \textit{Ventidue}
-    \item \textbf{Bot:} \textit{Se hai altri sintomi da segnalare, dimmeli ora}
-    \item \textbf{Utente:} \textit{Nient'altro}
-    \item \textbf{Bot:} \textit{Come definirebbe il suo dolore da 1 a 10?}
-    \item \textbf{Utente:} \textit{Sette}
-    \item \textbf{Bot:} \textit{Potresti dirmi il tuo nome completo?}
-    \item \textbf{Utente:} \textit{Simone Montali}
-    \item \textbf{Bot:} \textit{Il tuo nome è Simone Montali, giusto?}
-    \item \textbf{Utente:} \textit{Esatto}
-    \item \textbf{Bot:} \textit{Grazie per la pazienza, recati al banco YELLOW}
+  \item \textbf{Utente:} \textit{Puoi aiutarmi?}
+  \item \textbf{Bot:} \textit{Prima di tutto, è lei ad avere bisogno?}
+  \item \textbf{Utente:} \textit{Esatto}
+  \item \textbf{Bot:} \textit{Qual è il sintomo principale?}
+  \item \textbf{Utente:} \textit{Ho la febbre}
+  \item \textbf{Bot:} \textit{Hai la febbre, quindi. Ti sei misurato di recente?}
+  \item \textbf{Utente:} \textit{Sì}
+  \item \textbf{Bot:} \textit{Per favore, dimmi a quanto hai la febbre}
+  \item \textbf{Utente:} \textit{Trentasette e otto}
+  \item \textbf{Bot:} \textit{Mi serve qualche informazione aggiuntiva per la diagnosi. Ora ti farò alcune domande a cui rispondere sì o no. Hai male alla gola?}
+  \item \textbf{Utente:} \textit{Sì}
+  \item \textbf{Bot:} \textit{Soffri di raffreddore?}
+  \item \textbf{Utente:} \textit{Sì}
+  \item \textbf{Bot:} \textit{Noti un affaticamento quando respiri?}
+  \item \textbf{Utente:} \textit{No}
+  \item \textbf{Bot:} \textit{Hai la tosse?}
+  \item \textbf{Utente:} \textit{Sì}
+  \item \textbf{Bot:} \textit{Sei stato a stretto contatto con persone affette dal nuovo Coronavirus?}
+  \item \textbf{Utente:} \textit{Sì}
+  \item \textbf{Bot:} \textit{Fai fatica a sentire i sapori e gli odori?}
+  \item \textbf{Utente:} \textit{Sì}
+  \item \textbf{Bot:} \textit{Stiamo chiamando un medico. È possibile che tu sia affetto da COVID19. Mi potresti dire quanti anni hai?}
+  \item \textbf{Utente:} \textit{Ventidue}
+  \item \textbf{Bot:} \textit{Se hai altri sintomi da segnalare, dimmeli ora}
+  \item \textbf{Utente:} \textit{Nient'altro}
+  \item \textbf{Bot:} \textit{Come definirebbe il suo dolore da 1 a 10?}
+  \item \textbf{Utente:} \textit{Sette}
+  \item \textbf{Bot:} \textit{Potresti dirmi il tuo nome completo?}
+  \item \textbf{Utente:} \textit{Simone Montali}
+  \item \textbf{Bot:} \textit{Il tuo nome è Simone Montali, giusto?}
+  \item \textbf{Utente:} \textit{Esatto}
+  \item \textbf{Bot:} \textit{Grazie per la pazienza, recati al banco YELLOW}
 \end{itemize}
 \begin{figure}[h]
-    \begin{center}
-        \includegraphics[width=0.45\columnwidth]{images/skills/temperature.png}
-        \includegraphics[width=0.45\columnwidth]{images/skills/facemask.png}
-    \end{center}
-    \caption{Alcune schermate della GUI durante la diagnostica del COVID19}
-    \label{fig:gui-screens}
+  \begin{center}
+    \includegraphics[width=0.45\columnwidth]{images/skills/temperature.jpg}
+    \includegraphics[width=0.45\columnwidth]{images/skills/facemask.jpg}
+  \end{center}
+  \caption{Alcune schermate della GUI durante la diagnostica del COVID19}
+  \label{fig:gui-screens}
 \end{figure}
